# detection-rule-classifier

./: .gitignore  .markdownlint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/linters/: .flake8.jupiter  .isort.cfg  .python-lint.jupiter
.github/workflows/: dependency.yml  lint.yml  test.yml
aggregation/: README.md  __init__.py  config_insights.json  config_utils.py  data_processor.py  enrichment.py  insights_generator.py  pipeline.py  prompts.py
aggregation/demo/: aggregated_data.json  config.json  insights.json
aggregation/tests/: __init__.py  test_data_processor.py  test_insights_generator.py  test_new_insights.py  test_pipeline.py  test_prompts.py
classification/: README.md  config_example_one_step.json  config_example_two_step.json  merge_original_labels.py  pipeline.py  utils.py
mitre_mapping/: USAGE.md  __init__.py  cyber_kill_chain_mapping.json  example_usage.py  mitre_attack_mapper.py
rules_fetcher/: .gitignore  default_rules_list.txt  rules_fetcher.py
visualization/: app.py  charts.py
visualization/.streamlit/: secrets.toml
visualization/data/: trending_techniques.csv
visualization/tests/: __init__.py  conftest.py  test_app_rendering.py  test_charts.py  test_data_processing.py
visualization/tests/fixtures/: __init__.py  sample_data.py
